name: engine-io
version: 1.2.23
synopsis: A Haskell implementation of Engine.IO
homepage: http://github.com/ocharles/engine.io
license: BSD3
license-file: LICENSE
author: Oliver Charles
maintainer: ollie@ocharles.org.uk
category: Web
build-type: Simple
cabal-version: >=1.10
description:
  This library provides a Haskell implementation of
  <https://github.com/Automattic/engine.io Engine.IO>, a library for real-time
  client-server communication on the web. Engine.IO works with old browsers via
  XHR long-polling, and seamlessy upgrades to web sockets. This implementation
  supports the majority of the Engine.IO protocol, including text and binary
  packets and the upgrading protocol.

extra-source-files: Changelog.md

library
  exposed-modules:
    Network.EngineIO

  other-extensions:
   RankNTypes, OverloadedStrings, RecordWildCards

  build-depends:
    aeson >=1.4 && <2.3,
    async >=2.0 && <2.3,
    attoparsec >=0.14 && <0.15,
    base >=4.8 && <4.18,
    base64-bytestring >=1.0 && <1.3,
    bytestring >=0.10.2.0 && <0.14,
    errors >= 2.0.0 && <2.4,
    free >= 4.9 && <5.3,
    monad-loops >=0.4 && <0.5,
    mwc-random >=0.13 && <0.16,
    stm >=2.4 && <2.6,
    stm-delay >= 0.1.1 && <0.2,
    text >=0.11 && <1.5,
    transformers >=0.2 && <0.6,
    unordered-containers >=0.2 && <0.3,
    vector >=0.10 && <0.14,
    websockets >=0.11 && <0.14

  hs-source-dirs: src
  default-language: Haskell2010

  ghc-options: -Wall -O2 -fwarn-incomplete-uni-patterns
